--- a/app.json
+++ b/app.json
@@ -7,7 +7,7 @@
         "uuid": "OpenFin-Symphony-udbrf2z9sehilik9",
         "autoShow": true,
         "defaultCentered": true,
-        "frame": false,
+        "frame": true,
         "defaultHeight": 600,
         "defaultWidth": 800,
         "preload": "http://localhost:8080/bundle/bundle.js"
@@ -17,7 +17,7 @@
         "version": "canary"
     },
     "shortcut": {
-        "company": "OpenFin",
+        "company": "Symphony OpenFin",
         "description": "Experimental client for Symphony - running OpenFin",
         "name": "Symphony OpenFin",
         "icon": "http://localhost:8080/symphony-symbol.png"
