--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "homepage": "https://github.com/openfin/symphony-of",
   "scripts": {
-    "start": "http-server -c-1",
+    "start": "http-server -c-1 | node server.js",
     "build": "cat ./js/window.js ./js/notify.js ./js/screensnippet.js ./js/header.js ./js/main.js  > ./bundle/bundle.js"
   },
   "devDependencies": {
@@ -21,6 +21,9 @@
     "openfin-cli": "1.1.5"
   },
   "dependencies": {
-    "favico.js": "^0.3.10"
+    "express": "^4.15.4",
+    "favico.js": "^0.3.10",
+    "http": "0.0.0",
+    "path": "^0.12.7"
   }
 }
